third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/public_match_cover.exp
processed 8 tasks
task 0 lines 1-17:  publish [module 0xc0ffee::m {]
task 1 lines 19-70:  publish [module 0xc0ffee::test_m {]
task 2 lines 72-93:  publish [module 0xc0ffee::n {]
task 3 lines 95-110:  publish [module 0xc0ffee::test_n {]
task 4 lines 112-134:  publish [module 0xc0ffee::o {]
task 5 lines 136-169:  publish [module 0xc0ffee::test_o {]
task 6 lines 171-193:  publish [module 0xc0ffee::o_fail {]
task 7 lines 195-230:  publish [module 0xc0ffee::test_o_fail {]
Error: compilation errors:
 error: unreachable pattern
    ┌─ TEMPFILE7:204:13
    │
204 │             E::V1 {..} => {}
    │             ^^^^^^^^^^

error: unreachable pattern
    ┌─ TEMPFILE7:214:13
    │
214 │             E::V1 {b: G::G2{ a: H::H2 {b: _}}, a: F::F1} => {},
    │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
    ┌─ TEMPFILE7:223:13
    │
223 │             E::V1 {..} => {}
    │             ^^^^^^^^^^


